minikube/micrograde-kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.microapp.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: micro-kibana
                port:
                  number: 5601
